# World-arrangement-system

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  pyproject.toml
config/: AGENTS.md.template  codex-mcp.config.example.toml  models.yaml.example  policies.yaml.example  projects.yaml.example  routing_rules.yaml  worker_permissions.yaml
console-web/: index.html  package-lock.json  package.json  vite.config.ts
docs/: ADAPTIVE_PARALLELISM.md  ARCHITECTURE.md  CODEX_ENTRY.md  CODEX_USAGE.md  DEEP_RESEARCH_7_IMPLEMENTATION_AUDIT_2026-06-29.md  DYNAMIC_APPROVAL_GRAPH.md  GLOBAL_PROJECTS.md  IMPLEMENTATION_NOTES.md  LIGHTWEIGHT_DEPLOYMENT.md  MODEL_ROUTING.md  OPENCODE_WORKER.md  README.md  ROUTER_V2.md  SECURITY.md  V1_SOP.md  WINDOWS_WSL_DEPLOYMENT.md  WORKER_CONTRACT.md  WORLD_20_SAMPLE_REAL_VALIDATION_2026-06-29.md  WORLD_BASELINE_RUNNER_V1.md  WORLD_BOTTOM_CODE_SCAN_CONTINUATION_2026-07-01.md  WORLD_BOTTOM_CODE_SCAN_IMPROVEMENT_GATE_PLAN_2026-07-01.md  WORLD_BUDGETED_10_SAMPLE_COMPARISON_2026-06-29.md  WORLD_CAPABILITY_ASSESSMENT_AND_UPGRADE_PLAN_2026-06-29.md  WORLD_CURRENT_UPGRADE_PLAN_AND_QUALITY_GATE_2026-07-01.md  WORLD_EXECUTION_PROTOCOL.md  WORLD_GRASP_GOF_REFACTOR_ROADMAP.md  WORLD_MVP_QUALITY_EVALUATION_2026-06-29.md  WORLD_NAMING.md  WORLD_POSTFIX_HARD_CONTRACT_SAMPLE_2026-06-30.md  WORLD_POSTFIX_SMALL_SAMPLE_2026-06-30.md  WORLD_PROJECT_MEMORY_V1.md  WORLD_SMALL_COMPARISON_SAMPLE_2026-07-01.md  WORLD_SMALL_COMPARISON_SAMPLE_2026-07-01_ROUND2.md  WORLD_SMALL_COMPARISON_SAMPLE_2026-07-01_ROUND3.md  WORLD_SYSTEM_OVERVIEW.md  WORLD_TOKEN_LEDGER_V1.md  (+1 more)
(+306 files in other folders)
