[project]
name = "ai-orchestrator-v1"
version = "0.1.0"
description = "Single-entry multi-model coding orchestrator for Codex via MCP"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
ai-dispatcher = "orchestrator.cli:main"
ai-dispatcher-mcp = "orchestrator.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
